--- a/nosotros.html
+++ b/nosotros.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <!-- BOOTSTRAP MENU START -->
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #151515;">
@@ -78,7 +78,7 @@
             </nav>
         </div>
     </header>
-
+    <div class="divider"></div>
     <main>
         <!-- START GRID -->
         <div class="container">
