--- a/blog.html
+++ b/blog.html
@@ -20,8 +20,8 @@
 </head>
 
 <body>
-    <header>
-            <!-- BOOTSTRAP MENU START -->
+    <header class="header">
+        <!-- BOOTSTRAP MENU START -->
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #151515;">
                 <!-- logo -->
@@ -78,6 +78,7 @@
             </nav>
         </div>
     </header>
+    <div class="divider"></div>
     <main class="container containerBlog">
         <div class="row">
             <div class="col-12 title"  data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
