--- a/contacto.html
+++ b/contacto.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <!-- BOOTSTRAP MENU START -->
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #151515;">
@@ -78,6 +78,7 @@
             </nav>
         </div>
     </header>
+    <div class="divider"></div>
     <main class="container containerContacto">
         <div class="row">
             <div class="col-12 title" data-aos="fade-up" data-aos-duration="1000"
