--- a/servicios.html
+++ b/servicios.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <!-- BOOTSTRAP MENU START -->
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #151515;">
@@ -80,6 +80,7 @@
             </nav>
         </div>
     </header>
+    <div class="divider"></div>
     <main>
         <!-- SERVICIOS -->
         <div class="container" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
