alt completados con seo

--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #151515;">
                 <!-- logo -->
-                <a class="navbar-brand" href="#"><img src="style/images/logo-light@2x.png" alt=""
+                <a class="navbar-brand" href="#"><img src="style/images/logo-light@2x.png" alt="memoriesphotostories logo"
                         class="logoHeader"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -87,7 +87,7 @@
             </div>
 
             <div class="col-12"  data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
-                <img src="style/images/gallery/blog1.png" alt="" class="galeria">
+                <img src="style/images/gallery/anillosDeBodaBlog1.png" alt="detalle de anillos y rosario de boda en la mesa" class="galeria">
             </div>
             <div class="col-12" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                 <div >
@@ -126,10 +126,10 @@
                 </div>
             </div>
             <div class="col-md-6 fotoBlog" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
-                <img src="style/images/gallery/blog2.png" alt="" class="galeria">
+                <img src="style/images/gallery/bodaIglesiaBuenosAiresBlog2.png" alt="altar en boda de iglesia, Buenos Aires" class="galeria">
             </div>
             <div class="col-md-6 fotoBlog" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
-                <img src="style/images/gallery/blog3.png" alt="" class="galeria">
+                <img src="style/images/gallery/parejaBodaBlog3.png" alt="manos de pareja, boda" class="galeria">
             </div>
             <div class="col-12" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                 <h4 class="row__parrafo">Me encanta estar ahí, para ellos es un momento especial y sus sentimientos conectan a
@@ -193,7 +193,7 @@
 <!-- LOGO FOOTER DEL SITIO -->
 <div class="subFooter container">
     <div>
-        <img class="subFooter__logo" src="style/images/favicon.png" alt="">
+        <img class="subFooter__logo" src="style/images/favicon.png" alt="memoriesphotostories favicon">
     </div>
     <div>
         <p class="subFooter__p">© 2021 Memories. Todos los derechos reservados.</p>
