--- a/galeria.html
+++ b/galeria.html
@@ -25,7 +25,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #151515;">
                 <!-- logo -->
-                <a class="navbar-brand" href="#"><img src="style/images/logo-light@2x.png" alt=""
+                <a class="navbar-brand" href="#"><img src="style/images/logo-light@2x.png" alt="memoriesphotostories favicon"
                         class="logoHeader"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -94,37 +94,37 @@
             <div class="familia" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                 <a href="galeria.html" class="link">
                     <h3 class="galeriaTitulos">Book Familiar</h3>
-                    <img class="galeria blend" src="style/images/gallery/bookFamiliar.png" alt="">
+                    <img class="galeria blend" src="style/images/gallery/bookFamiliar.png" alt="concepto familia lifestyle">
                 </a>
             </div>
             <div class="bodas" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                 <a href="galeria.html" class="link">
                     <h3 class="galeriaTitulos">Fotografo de Boda</h3>
-                    <img class="galeria blend" src="style/images/gallery/fotografiaDeBodas.png" alt="">
+                    <img class="galeria blend" src="style/images/gallery/fotografiaDeBodas.png" alt="boda en el castillo, pareja se abraza">
                 </a>
             </div>
             <div class="estudio" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                 <a href="galeria.html" class="link">
                     <h3 class="galeriaTitulos">Fotografía de Producto</h3>
-                    <img class="galeria blend" src="style/images/gallery/fotografiaDeProducto.png" alt="">
+                    <img class="galeria blend" src="style/images/gallery/fotografiaDeProducto.png" alt="cajon de producto, granadas rojas">
                 </a>
             </div>
             <div class="contacto" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                 <a href="galeria.html" class="link">
                     <h3 class="galeriaTitulos">Fotografía Aérea</h3>
-                    <img class="galeria blend" src="style/images/gallery/fotografiaAerea2.png" alt="">
+                    <img class="galeria blend" src="style/images/gallery/fotografiaAerea2.png" alt="atardecer en el mar, desde un dron ">
                 </a>
             </div>
             <div class="nosotros" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                 <a href="galeria.html" class="link">
                     <h3 class="galeriaTitulos">Nightlife</h3>
-                    <img class="galeria blend" src="style/images/gallery/nightlife.png" alt="">
+                    <img class="galeria blend" src="style/images/gallery/nightlife.png" alt="siluetas en la noche, Buenos Aires nightlife">
                 </a>
             </div>
             <div class="servicios" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                 <a href="galeria.html" class="link">
                     <h3 class="galeriaTitulos">Fine Art</h3>
-                    <img class="galeria blend" src="style/images/gallery/fineArt.png" alt="">
+                    <img class="galeria blend" src="style/images/gallery/fineArt.png" alt="cascada galleria fine art ">
                 </a>
             </div>
     </main>
@@ -183,7 +183,7 @@
     <!-- LOGO FOOTER DEL SITIO -->
     <div class="subFooter container">
         <div>
-            <img class="subFooter__logo" src="style/images/favicon.png" alt="">
+            <img class="subFooter__logo" src="style/images/favicon.png" alt="memoriesphotostories favicon">
         </div>
         <div>
             <p class="subFooter__p">© 2021 Memories. Todos los derechos reservados.</p>
