--- a/index.html
+++ b/index.html
@@ -132,37 +132,37 @@
         <div class="bodas" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
             <a href="galeria.html" class="link">
                 <h3 class="galeriaTitulos">Fotógrafo de Boda</h3>
-                <img class="galeria blend" src="style/images/gallery/fotografiaDeBodas.png" alt="">
+                <img class="galeria blend" src="style/images/gallery/fotografiaDeBodas.png" alt="boda de pareja, abrazo en el castillo">
             </a>
         </div>
         <div class="estudio" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
             <a href="galeria.html" class="link">
                 <h3 class="galeriaTitulos">Fotografía de Producto</h3>
-                <img class="galeria blend" src="style/images/gallery/fotografiaDeProducto2.png" alt="">
+                <img class="galeria blend" src="style/images/gallery/fotografiaDeProducto2.png" alt="Producto de cafe, latte">
             </a>
         </div>
         <div class="familia" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
             <a href="galeria.html" class="link">
                 <h3 class="galeriaTitulos">Book Familiar</h3>
-                <img class="galeria blend" src="style/images/gallery/bookFamiliar.png" alt="">
+                <img class="galeria blend" src="style/images/gallery/bookFamiliar.png" alt="niños jugando en la arena, momento Familiar">
             </a>
         </div>
         <div class="nosotros" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
             <a href="nosotros.html" class="link">
                 <h3 class="galeriaTitulos">Nosotros</h3>
-                <img class="galeria blend" src="style/images/gallery/fotografiaDeProducto.png" alt="">
+                <img class="galeria blend" src="style/images/gallery/fotografiaDeProducto.png" alt="cajon de producto, frutas granadas rojas">
             </a>
         </div>
         <div class="servicios" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
             <a href="servicios.html" class="link">
                 <h3 class="galeriaTitulos">Servicios</h3>
-                <img class="galeria blend" src="style/images/gallery/fotografiaLifestyle2.png" alt="">
+                <img class="galeria blend" src="style/images/gallery/fotografiaLifestyle2.png" alt="pareja lifestyle caminando de la mano">
             </a>
         </div>
         <div class="contacto" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
             <a href="contacto.html" class="link">
                 <h3 class="galeriaTitulos">Contacto</h3>
-                <img class="galeria blend" src="style/images/gallery/fotografiaLifestyle.png" alt="">
+                <img class="galeria blend" src="style/images/gallery/fotografiaLifestyle.png" alt="lifestyle pies juntos en la roca del mar">
             </a>
         </div>
     </div>
@@ -221,7 +221,7 @@
     <!-- LOGO FOOTER DEL SITIO -->
     <div class="subFooter container">
         <div>
-            <img class="subFooter__logo" src="style/images/favicon.png" alt="">
+            <img class="subFooter__logo" src="style/images/favicon.png" alt="memories favicon">
         </div>
         <div>
             <p class="subFooter__p">© 2021 Memories. Todos los derechos reservados.</p>
