--- a/nosotros.html
+++ b/nosotros.html
@@ -25,7 +25,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #151515;">
                 <!-- logo -->
-                <a class="navbar-brand" href="#"><img src="style/images/logo-light@2x.png" alt=""
+                <a class="navbar-brand" href="#"><img src="style/images/logo-light@2x.png" alt="memoriesphotostories logo"
                         class="logoHeader"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -90,7 +90,7 @@
             </div>
             <div class="row flexNosotros" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                 <div class="col-md-6 fotoNosotros">
-                    <img src="style/images/gallery/nosotros2.png" alt="" class="galeria">
+                    <img src="style/images/gallery/fotografiaLifestyle.png" alt="Lifestyle pies de una pareja" class="galeria">
                 </div>
                 <div class="col-md-6">
                     <ul>
@@ -168,7 +168,7 @@
     <!-- LOGO FOOTER DEL SITIO -->
     <div class="subFooter container">
         <div>
-            <img class="subFooter__logo" src="style/images/favicon.png" alt="">
+            <img class="subFooter__logo" src="style/images/favicon.png" alt="memoriesphotostories favicon">
         </div>
         <div>
             <p class="subFooter__p">© 2021 Memories. Todos los derechos reservados.</p>
