--- a/servicios.html
+++ b/servicios.html
@@ -26,7 +26,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #151515;">
                 <!-- logo -->
-                <a class="navbar-brand" href="#"><img src="style/images/logo-light@2x.png" alt=""
+                <a class="navbar-brand" href="#"><img src="style/images/logo-light@2x.png" alt="memoriesphotostories logo"
                         class="logoHeader"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -109,7 +109,7 @@
                     </p>
                 </div>
                 <div class="col-md-12 col-lg-5 row__photo">
-                    <img src="style/images/gallery/bookFamiliar.png" alt="" class="galeria">
+                    <img src="style/images/gallery/bookFamiliar.png" alt="niños jugando, familia lifestyle" class="galeria">
                 </div>
             </div>
             <div class="row" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
@@ -130,7 +130,7 @@
                     </p>
                 </div>
                 <div class="col-md-12 col-lg-5 row__photo">
-                    <img src="style/images/gallery/fotografiaDeBodas.png" alt="" class="galeria">
+                    <img src="style/images/gallery/fotografiaDeBodas.png" alt="pareja abrazo de boda" class="galeria">
                 </div>
             </div>
             <div class="row" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
@@ -150,7 +150,7 @@
                         Un servicio calido y profesional.
                     </p>
                 </div>
-                <div class="col-md-12 col-lg-5 row__photo"> <img src="style/images/gallery/fotografiaDeProducto2.png" alt=""
+                <div class="col-md-12 col-lg-5 row__photo"> <img src="style/images/gallery/fotografiaDeProducto2.png" alt="cafe especialidad"
                         class="galeria">
                 </div>
             </div>
@@ -211,7 +211,7 @@
     <!-- LOGO FOOTER DEL SITIO -->
     <div class="subFooter container">
         <div>
-            <img class="subFooter__logo" src="style/images/favicon.png" alt="">
+            <img class="subFooter__logo" src="style/images/favicon.png" alt="memoriesphotostories favicon">
         </div>
         <div>
             <p class="subFooter__p">© 2021 Memories. Todos los derechos reservados.</p>
